# AI-Video-Transforms

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  FRONTEND.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REBRAND_SPEC.md  SECURITY.md  cost_tracking.py  docker-compose.yml  install.sh  main.py  permissions.py  pyproject.toml  storage.py  validators.py  web_app.py  web_app_models.py
.claude/: CLAUDE.md  settings.json
.claude/agents/: backend-architect.md  frontend-architect.md  kg-engineer.md  ui-architect.md
.claude/commands/: document-and-ship.md  prime.md  prompt-transform.md
.claude/hooks/: check-gemini-context.py  clean-claude-attributions.sh  move-gemini-context.py
.claude/rules/: code-style.md  codex-mcp.md  config.md  fastapi.md  frontend.md  gemini-mcp.md  kg.md  mcp-tools.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
agent_video/: __init__.py  agent.py  file_tool.py  server.py  transcribe_tool.py  transcript_storage_tools.py
agent_video/prompts/: __init__.py  registry.py  video_transcription.py
ai_docs/: CLAUDE_AGENT_SDK_SUMMARY.md
ai_docs/claude_agent_sdk/: 01_OVERVIEW_QUICKSTART.md  02_CORE_API_TOOLS.md  03_SESSION_PERMISSIONS_HOSTING.md  04_API_REFERENCE.md  05_FILE_CHECKPOINTING.md
ai_docs/openai_api_reference/: README.md  audio-openai-api-reference.md  speech-to-text-openai-api.md  using-gpt-5-1-openai-api.md
app/: main.py
app/agent/: __init__.py  agent.py  file_tool.py  kg_tool.py  server.py  transcribe_tool.py  transcript_storage_tools.py
app/api/: __init__.py  deps.py  errors.py
app/core/: config.py  cost_tracking.py  hooks.py  lifespan.py  logging.py  permissions.py  session.py  storage.py  validators.py
app/kg/: __init__.py  domain.py  knowledge_base.py  models.py  normalization.py  persistence.py  resolution.py  schemas.py
app/models/: api.py  audit.py  errors.py  jobs.py  requests.py  service.py  structured.py  transcript.py
guides/: README.md  api-reference.md  docker-deployment.md  docker-troubleshooting.md  extending-cognivagent.md  frontend-architecture.md  knowledge-graph.md  sdk-agent.md
mcp_servers/: __init__.py
scripts/: README.md  test-dev-install.sh  test-docker.sh  test-user-install.sh
specs/: backend-spec.md  frontend-spec.md  gemini-review-improvements-plan.md  security-spec.md
static/: script.js  style.css
templates/: index.html
tests/: __init__.py  conftest.py  test_activity_streaming.py  test_api.py  test_api_deps.py  test_api_integration.py  test_async.py  test_audit.py  test_codex_mcp.py  test_concurrency.py  test_config.py  test_cost.py  test_error_schema.py  test_job_persistence.py  test_job_queue.py  test_job_recovery.py  test_kg_api.py  test_kg_api_extraction.py  test_kg_domain.py  test_kg_e2e_flow.py  test_kg_extraction_tool.py  test_kg_input_validation.py  test_kg_insights.py  test_kg_integration.py  test_kg_knowledge_base.py  test_kg_mcp_tools.py  test_kg_normalization.py  test_kg_persistence.py  test_kg_resolution.py  test_kg_resolution_api.py  test_kg_schemas.py  test_kg_service.py  test_kg_service_extraction.py  test_kg_templates.py  test_kg_tools.py  test_merge_safety.py  test_permissions.py  test_resolution_audit.py  test_services.py  test_storage.py  (+2 more)
(+131 files in other folders)
