[project]
name = "agent-video-to-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.10",
    "fastapi>=0.123.5",
    "jinja2>=3.1.6",
    "moviepy>=2.2.1",
    "numpy>=2.3.5",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "yt-dlp==2025.9.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "nbqa>=1.9.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"

[[tool.mypy.overrides]]
module = "slash_commands_demo"
# Jupyter notebooks use top-level await which mypy doesn't support
disable_error_code = ["top-level-await"]
