[project]
name = "cognivagent"
version = "0.1.0"
description = "AI agent for video transcription and knowledge graph extraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.10",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "fastapi>=0.123.5",
    "fastmcp>=2.0.0",
    "google-genai>=1.0.0",
    "jinja2>=3.1.6",
    "networkx>=3.0",
    "openai>=2.8.1",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "pydantic-settings>=2.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "typer>=0.9.0",
    "types-aiofiles>=25.1.0.20251011",
    "uvicorn>=0.38.0",
    "yt-dlp==2025.9.5",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.18.2",
    "nbqa>=1.9.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.6",
]

[project.scripts]
kg = "kg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "kg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
